--- a/src/Components/Topics/Courses.css
+++ b/src/Components/Topics/Courses.css
@@ -37,7 +37,6 @@
     color: rgb(37, 4, 184) ;
    border-bottom: 1px solid goldenrod;
     border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 .brain-icon{
     color: palevioletred;
@@ -65,6 +64,7 @@
     }
     .heading-details h1 {
         text-align: center;
+        border: none;
     }
     .heading-details p{
         text-align: center;
